--- a/frontend/shop/package.json
+++ b/frontend/shop/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "browser": "^0.2.6",
+    "dotenv": "^16.4.5",
     "link": "^1.5.1",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
