--- a/shop/package.json
+++ b/shop/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build && next export"
   },
   "dependencies": {
     "@next/env": "^15.0.3",
